refactor: project refactoring
