# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "(INSIRA NOME DA API)",
-        "description": "Documentação da API para facilitar acessos e testes no (INSIRA O NOME DA API).\n * Feito pelo setor de TI da Prefeitura de São Mateus.\n * PARA UTILIZAR AS ROTAS, COMECE FAZENDO LOGIN.",
+        "description": "Documentação da API para facilitar acessos e testes no (INSIRA O NOME DA API).\n *     Feito pelo setor de TI da Prefeitura de São Mateus.\n *     PARA UTILIZAR AS ROTAS, COMECE FAZENDO LOGIN.",
         "version": "1.0.0"
     },
     "paths": {
@@ -546,14 +546,14 @@
                 ]
             }
         },
-        "/api/users/hard-delete/{user}": {
+        "/api/users/{user}/hard-delete": {
             "delete": {
                 "tags": [
                     "Usuários"
                 ],
                 "summary": "Excluir usuário físicamente",
                 "description": "Exclui um usuário de forma física",
-                "operationId": "1b1e07ee4bcf8f5681f0448222a560f4",
+                "operationId": "09bc54975aec6c0ac721bb19f8def87d",
                 "parameters": [
                     {
                         "name": "user",
@@ -679,7 +679,7 @@
         },
         {
             "name": "Usuários",
-            "description": "Operações com usuários (ADMIN)"
+            "description": "Operações com usuários"
         }
     ]
 }
